tests/error/unrecognized_expression.ca.output
[tests/error/unrecognized_expression.ca:3] 
 [:304 inside syntax_error()] 
  [inside error()] 
   Error: Syntax error: Expected identifier after def, found: 1
